fix blog pages not showing. add back gallery page.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -6,6 +6,12 @@ nav li {
   font-family: Courier New, Courier, monospace;
 }
 
+nav:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 #footer {
   margin-top: 2em;
   font-size:0.8em;
